<resources>
    <string name="app_name">CoStat</string>
    <integer name="com_vk_sdk_AppId">7865877</integer>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_placeholder">Имя фамилия</string>
    <string name="subscribers_placeholder">123</string>
    <string name="addimage">addImage</string>
    <string name="accounts">Accounts</string>
    <string name="groups_and_channels">Groups and Channels</string>
    <string name="add_account">Add Account</string>
    <string name="facebook_app_id">124143913125566</string>
    <string name="fb_login_protocol_scheme">fb124143913125566</string>
    <string name="add_facebook_account_first">Add facebook account first</string>
    <string name="group_name_placeholder">Group Name</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="friends_text">Друзья</string>
    <string name="subscribers_text">Подписчики</string>
    <string name="friends_online">Друзья онлайн</string>
    <string name="comments_text">Комментарии</string>
    <string name="likes_text">Лайки</string>
    <string name="subscribed_text">Подписались</string>
    <string name="unsubscribed_count">Отписались</string>
</resources>