<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ChannelDetailsFragment">

    <ImageView
        android:id="@+id/group_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_placeholder"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/group_avatar"
        app:layout_constraintStart_toStartOf="@+id/group_avatar"
        app:layout_constraintTop_toBottomOf="@+id/group_avatar" />

    <TextView
        android:id="@+id/comments_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/likes_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_name" />

    <TextView
        android:id="@+id/likes_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likes_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/comments_text"
        app:layout_constraintTop_toBottomOf="@+id/group_name" />

    <TextView
        android:id="@+id/comments_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/comments_text"
        app:layout_constraintStart_toStartOf="@+id/comments_text"
        app:layout_constraintTop_toBottomOf="@+id/comments_text" />

    <TextView
        android:id="@+id/likes_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/likes_text"
        app:layout_constraintStart_toStartOf="@+id/likes_text"
        app:layout_constraintTop_toBottomOf="@+id/likes_text" />

    <TextView
        android:id="@+id/subscribd_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subscribed_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/unsubscribed_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comments_count_text" />

    <TextView
        android:id="@+id/unsubscribed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unsubscribed_count"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/subscribd_text"
        app:layout_constraintTop_toBottomOf="@+id/likes_count_text" />

    <TextView
        android:id="@+id/subscribed_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/subscribd_text"
        app:layout_constraintStart_toStartOf="@+id/subscribd_text"
        app:layout_constraintTop_toBottomOf="@+id/subscribd_text" />

    <TextView
        android:id="@+id/unsubscribed_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/unsubscribed_text"
        app:layout_constraintStart_toStartOf="@+id/unsubscribed_text"
        app:layout_constraintTop_toBottomOf="@+id/unsubscribed_text" />

</androidx.constraintlayout.widget.ConstraintLayout>