<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AccountDetailsFragment">

    <ImageView
        android:id="@+id/avatar_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_placeholder"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/avatar_image"
        app:layout_constraintStart_toStartOf="@+id/avatar_image"
        app:layout_constraintTop_toBottomOf="@+id/avatar_image" />

    <TextView
        android:id="@+id/friends_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friends_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/subscribers_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_field" />

    <TextView
        android:id="@+id/friends_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/friends_text"
        app:layout_constraintStart_toStartOf="@+id/friends_text"
        app:layout_constraintTop_toBottomOf="@id/friends_text" />
    <TextView
        android:id="@+id/subscribers_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subscribers_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/friends_text"
        app:layout_constraintTop_toBottomOf="@+id/name_field" />

    <TextView
        android:id="@+id/subscribers_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/subscribers_text"
        app:layout_constraintStart_toStartOf="@+id/subscribers_text"
        app:layout_constraintTop_toBottomOf="@id/subscribers_text" />

    <TextView
        android:id="@+id/online_friends_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friends_online"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friends_count_text" />

    <TextView
        android:id="@+id/online_friends_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/online_friends_text"
        app:layout_constraintStart_toStartOf="@+id/online_friends_text"
        app:layout_constraintTop_toBottomOf="@id/online_friends_text" />
</androidx.constraintlayout.widget.ConstraintLayout>